[gd_scene load_steps=5 format=3 uid="uid://rvc5wk4c6ovw"]

[ext_resource type="Script" path="res://Scripts/Projectile.gd" id="1_vue53"]
[ext_resource type="Texture2D" uid="uid://dn68eh63u7wc4" path="res://Sprites/Bullet_3.png" id="2_k5ojk"]
[ext_resource type="AudioStream" uid="uid://coaxxx4c2s3l6" path="res://SFX/bomb.wav" id="3_68bc8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_36lwe"]
radius = 6.99999
height = 32.0

[node name="Area2D" type="Area2D"]
rotation = 1.5708
collision_mask = 192
script = ExtResource("1_vue53")
cad = 0.75
knb = 400
damage = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_36lwe")

[node name="Bullet3" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_k5ojk")

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_68bc8")

[node name="Hit_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_68bc8")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
